unpackaged/main/default/objects/ProgramApi__Goals__c/ProgramApi__Goals__c.object-meta.xml
<CustomObject>
    <description>This object captures the requirements assigned to a participant for an each term.</description>
    <label>Program Goals</label>
    <nameField>
        <displayFormat>PG-{00000}</displayFormat>
        <label>Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>