unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Goal_Description__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Goal_Description__c</fullName>
    <inlineHelpText>Read only. Requirement description</inlineHelpText>
    <label>Goal Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>