unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Navigation_URL__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Navigation_URL__c</fullName>
    <description>Read only. Inherited navigation URL from program requirement</description>
    <inlineHelpText>Read only. Inherited navigation URL from program requirement</inlineHelpText>
    <label>Navigation URL</label>
    <type>Url</type>
</CustomField>