unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Profile_Account__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Profile_Account__c</fullName>
    <description>Identifies Account to a program goal when program entity is Account.</description>
    <inlineHelpText>Identifies Account to a program goal when program entity is Account.</inlineHelpText>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>