unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Profile_Contact__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Profile_Contact__c</fullName>
    <description>Identifies Contact to program goal.</description>
    <inlineHelpText>Identifies Contact to program goal.</inlineHelpText>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>