unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Publish__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Goal displays to participant on program page</description>
    <inlineHelpText>Determines if Goal displays to participant on program page</inlineHelpText>
    <label>Publish</label>
    <type>Checkbox</type>
</CustomField>