unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Requirement__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SYSTEM. Identifies the program requirement that relates to goal</description>
    <inlineHelpText>SYSTEM. Identifies the program requirement that relates to goal</inlineHelpText>
    <label>Requirement</label>
    <referenceTo>ProgramApi__Requirement__c</referenceTo>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>