unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Requirement_Title__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Requirement_Title__c</fullName>
    <description>Defines the name of the requirement.</description>
    <inlineHelpText>Defines the name of the requirement.</inlineHelpText>
    <label>Requirement Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>