unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Result__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Result__c</fullName>
    <description>Captures grade results for completed tasks</description>
    <inlineHelpText>Captures grade results for completed tasks</inlineHelpText>
    <label>Result</label>
    <length>25</length>
    <type>Text</type>
</CustomField>