unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Status__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Status__c</fullName>
    <description>Identifies status of goal</description>
    <inlineHelpText>Identifies status of goal</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>