unpackaged/main/default/objects/ProgramApi__Goals__c/fields/ProgramApi__Term__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SYSTEM. Identifies the term related to goal</description>
    <inlineHelpText>SYSTEM. Identifies the term related to goal</inlineHelpText>
    <label>Program Term</label>
    <referenceTo>ProgramApi__Program_Term__c</referenceTo>
    <relationshipLabel>Program Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>